# docker-scrapy

./: Dockerfile  README.md  app.py  docker-compose.yml  entrypoint.sh  package.json  pyproject.toml
app/: app.py
docs/2018-12/2018-12-17/: 001-vuex.md
src/demo-project/: package.json
src/demo-project/src/: App.vue
src/demo-project/src/components/: ComputedComp.vue
